# metanir

./: LICENSE  README.md  app.py  app02.py  pyproject.toml  requirements.txt  requirements02.txt  requirements03.txt
.streamlit/: config.toml
